Add video player and update dependencies

--- a/src/components/ctametodo.astro
+++ b/src/components/ctametodo.astro
@@ -1,50 +1,48 @@
 ---
-import CtaButton from "./elements/ctabutton.astro";
+import CtaButton from './elements/ctabutton.astro';
 ---
 
 <section class="container mx-auto my-4">
-  <h1 class="md:text-4xl text-primary text-xl text-center font-bold">
-    Es Por Eso Que He Creado El Método:
-  </h1>
-  <div class="w-full md:w-1/2 p-4 mx-auto">
-    <img src="/aumenta_logo.svg" alt="aumenta logo" class="" />
-  </div>
-  <h2 class="md:text-xl text-primary">
-    Para mostrarte el sistema que te permitirá crear y vender tu consulta
-    presencial en solo 4 semanas, aun que no tengas experiencia en redes
-    sociales, ni seas un genio en comptacion o no tengas pagina web
-  </h2>
+	<h1 class="md:text-4xl text-primary text-xl text-center font-bold">
+		Es Por Eso Que He Creado El Método:
+	</h1>
+	<div class="w-full md:w-1/2 p-4 mx-auto">
+		<img src="/aumenta_logo.svg" alt="aumenta logo" class="" />
+	</div>
+	<h2 class="text-lg md:text-2 xl text-primary">
+		Para mostrarte el sistema que te permitirá crear y vender tu consulta presencial en solo 4
+		semanas, aun que no tengas experiencia en redes sociales, ni seas un genio en comptacion o no
+		tengas pagina web
+	</h2>
 
-  <div class="grid grid-cols-2 gap-4 mt-2 md:my-8">
-    <div>
-      <h2 class="md:text-xl text-primary font-semibold">
-        El Sistema Aumenta Pacientes es...
-      </h2>
-      <h3 class="md:text-xl text-primary font-light">
-        El método que te muestra como puedes generar ingresos con tu consulta,
-        aún que no tengas expereincia previa!
-      </h3>
-    </div>
-    <div>
-      <h2 class="md:text-xl text-primary font-semibold">
-        El Programa Aumenta Pacientes te va a aydar a:
-      </h2>
-      <h3 class="md:text-xl text-primary font-light">
-        Tener un negocio de consulta rentable con una agenda llena de pacientes,
-        teniendo con esto un impacto positivo, mas oportunidades para tu
-        familia, mayores ingresos, más tranquilidad y mucho mas.
-      </h3>
-    </div>
-  </div>
-  <CtaButton />
+	<div class="grid grid-cols-2 gap-4 mt-2 md:my-8">
+		<div>
+			<h2 class="md:text-xl text-primary font-semibold">El Sistema Aumenta Pacientes es...</h2>
+			<h3 class="md:text-xl text-primary font-light">
+				El método que te muestra como puedes generar ingresos con tu consulta, aún que no tengas
+				expereincia previa!
+			</h3>
+		</div>
+		<div>
+			<h2 class="md:text-xl text-primary font-semibold">
+				El Programa Aumenta Pacientes te va a aydar a:
+			</h2>
+			<h3 class="md:text-xl text-primary font-light">
+				Tener un negocio de consulta rentable con una agenda llena de pacientes, teniendo con esto
+				un impacto positivo, mas oportunidades para tu familia, mayores ingresos, más tranquilidad y
+				mucho mas.
+			</h3>
+		</div>
+	</div>
+	<CtaButton />
 
-  <h3 class="text-3xl text-primary font-semibold mb-2">
-    ¿Que conseguirás con el curso Aumenta Pacientes?
-  </h3>
-  <h4 class="text-2xl text-primary">
-    En AUMENTA PACIENTES encontrarás las herramientas de marketing digital más
-    disruptivas y LUCRATIVAS que usan todos los que están facturando y vendiendo
-    en las redes sociales, lograrás aprender a hacer publicidad bien hecha de tu
-    negocio de consulta y esto ayudará a llenar tu agenda de pacientes.
-  </h4>
+	<h3 class="text-3xl text-primary font-semibold mb-2 md:mt-8 mt-4">
+		¿Que conseguirás con el curso Aumenta Pacientes?
+	</h3>
+	<h4 class="text-2xl text-primary">
+		En AUMENTA PACIENTES encontrarás las herramientas de marketing digital más disruptivas y
+		LUCRATIVAS que usan todos los que están facturando y vendiendo en las redes sociales, lograrás
+		aprender a hacer publicidad bien hecha de tu negocio de consulta y esto ayudará a llenar tu
+		agenda de pacientes.
+	</h4>
 </section>
