--- a/src/components/elements/flip.astro
+++ b/src/components/elements/flip.astro
@@ -1,148 +1,147 @@
-<link href="https://unpkg.com/@pqina/flip/dist/flip.min.css" rel="stylesheet" />
+<head>
+	<link href="https://unpkg.com/@pqina/flip/dist/flip.min.css" rel="stylesheet" />
+</head>
 
 <style>
-  .tick {
-    font-size: 1rem;
-    white-space: nowrap;
-    font-family: arial, sans-serif;
-  }
+	.tick {
+		font-size: 1rem;
+		white-space: nowrap;
+		font-family: arial, sans-serif;
+	}
 
-  .tick-flip,
-  .tick-text-inline {
-    font-size: 2.5em;
-  }
+	.tick-flip,
+	.tick-text-inline {
+		font-size: 2.5em;
+	}
 
-  .tick-label {
-    margin-top: 1em;
-    font-size: 1em;
-  }
+	.tick-label {
+		margin-top: 1em;
+		font-size: 1em;
+	}
 
-  .tick-char {
-    width: 1.5em;
-  }
+	.tick-char {
+		width: 1.5em;
+	}
 
-  .tick-text-inline {
-    display: inline-block;
-    text-align: center;
-    min-width: 1em;
-  }
+	.tick-text-inline {
+		display: inline-block;
+		text-align: center;
+		min-width: 1em;
+	}
 
-  .tick-text-inline + .tick-text-inline {
-    margin-left: -0.325em;
-  }
+	.tick-text-inline + .tick-text-inline {
+		margin-left: -0.325em;
+	}
 
-  .tick-group {
-    margin: 0 0.5em;
-    text-align: center;
-  }
+	.tick-group {
+		margin: 0 0.5em;
+		text-align: center;
+	}
 
-  body {
-    background-color: #fff !important;
-  }
+	body {
+		background-color: #fff !important;
+	}
 
-  .tick-text-inline {
-    color: #595d63 !important;
-  }
+	.tick-text-inline {
+		color: #595d63 !important;
+	}
 
-  .tick-label {
-    color: #595d63 !important;
-  }
+	.tick-label {
+		color: #595d63 !important;
+	}
 
-  .tick-flip-panel {
-    color: #fff !important;
-  }
+	.tick-flip-panel {
+		color: #fff !important;
+	}
 
-  .tick-flip {
-    font-family: !important;
-  }
+	.tick-flip {
+		font-family: !important;
+	}
 
-  .tick-flip-panel-text-wrapper {
-    line-height: 1.45 !important;
-  }
+	.tick-flip-panel-text-wrapper {
+		line-height: 1.45 !important;
+	}
 
-  .tick-flip-panel {
-    background-color: #3c3e3c !important;
-  }
+	.tick-flip-panel {
+		background-color: #3c3e3c !important;
+	}
 
-  .tick-flip {
-    border-radius: 0.12em !important;
-  }
+	.tick-flip {
+		border-radius: 0.12em !important;
+	}
+
+	.tick-credits {
+		display: none !important;
+	}
 </style>
 
 <div class="tick" data-did-init="handleTickInit">
-  <div
-    data-repeat="true"
-    data-layout="horizontal fit"
-    data-transform="preset(d, h, m, s) -> delay"
-  >
-    <div class="tick-group">
-      <div
-        data-key="value"
-        data-repeat="true"
-        data-transform="pad(00) -> split -> delay"
-      >
-        <span data-view="flip"></span>
-      </div>
+	<div data-repeat="true" data-layout="horizontal fit" data-transform="preset(d, h, m, s) -> delay">
+		<div class="tick-group">
+			<div data-key="value" data-repeat="true" data-transform="pad(00) -> split -> delay">
+				<span data-view="flip"></span>
+			</div>
 
-      <span data-key="label" data-view="text" class="tick-label"></span>
-    </div>
-  </div>
+			<span data-key="label" data-view="text" class="tick-label"></span>
+		</div>
+	</div>
 </div>
 
 <script is:inline>
-  function handleTickInit(tick) {
-    // uncomment to set labels to different language
+	function handleTickInit(tick) {
+		// uncomment to set labels to different language
 
-    var locale = {
-      YEAR_PLURAL: "Años",
-      YEAR_SINGULAR: "Año",
-      MONTH_PLURAL: "Meses",
-      MONTH_SINGULAR: "Mes",
-      WEEK_PLURAL: "Semanas",
-      WEEK_SINGULAR: "Semana",
-      DAY_PLURAL: "Dias",
-      DAY_SINGULAR: "Dia",
-      HOUR_PLURAL: "Horas",
-      HOUR_SINGULAR: "Hora",
-      MINUTE_PLURAL: "Minutos",
-      MINUTE_SINGULAR: "Minuto",
-      SECOND_PLURAL: "Segs",
-      SECOND_SINGULAR: "Seg",
-      MILLISECOND_PLURAL: "Milli",
-      MILLISECOND_SINGULAR: "Millis",
-    };
+		var locale = {
+			YEAR_PLURAL: 'Años',
+			YEAR_SINGULAR: 'Año',
+			MONTH_PLURAL: 'Meses',
+			MONTH_SINGULAR: 'Mes',
+			WEEK_PLURAL: 'Semanas',
+			WEEK_SINGULAR: 'Semana',
+			DAY_PLURAL: 'Dias',
+			DAY_SINGULAR: 'Dia',
+			HOUR_PLURAL: 'Horas',
+			HOUR_SINGULAR: 'Hora',
+			MINUTE_PLURAL: 'Minutos',
+			MINUTE_SINGULAR: 'Minuto',
+			SECOND_PLURAL: 'Segs',
+			SECOND_SINGULAR: 'Seg',
+			MILLISECOND_PLURAL: 'Milli',
+			MILLISECOND_SINGULAR: 'Millis'
+		};
 
-    for (var key in locale) {
-      if (!locale.hasOwnProperty(key)) {
-        continue;
-      }
-      tick.setConstant(key, locale[key]);
-    }
+		for (var key in locale) {
+			if (!locale.hasOwnProperty(key)) {
+				continue;
+			}
+			tick.setConstant(key, locale[key]);
+		}
 
-    // format of due date is ISO8601
-    // https://en.wikipedia.org/wiki/ISO_8601
+		// format of due date is ISO8601
+		// https://en.wikipedia.org/wiki/ISO_8601
 
-    // '2018-01-31T12:00:00'        to count down to the 31st of January 2018 at 12 o'clock
-    // '2019'                       to count down to 2019
-    // '2018-01-15T10:00:00+01:00'  to count down to the 15th of January 2018 at 10 o'clock in timezone GMT+1
+		// '2018-01-31T12:00:00'        to count down to the 31st of January 2018 at 12 o'clock
+		// '2019'                       to count down to 2019
+		// '2018-01-15T10:00:00+01:00'  to count down to the 15th of January 2018 at 10 o'clock in timezone GMT+1
 
-    // create the countdown counter
-    const counter = Tick.count.down("2023-12-01T00:00:00+01:00");
+		// create the countdown counter
+		const counter = Tick.count.down('2023-12-01T00:00:00+01:00');
 
-    counter.onupdate = function (value) {
-      tick.value = value;
-    };
+		counter.onupdate = function (value) {
+			tick.value = value;
+		};
 
-    tick.root.credits.display = "none";
-    counter.onended = function () {
-      // redirect, uncomment the next line
-      // window.location = 'my-location.html'
-      // hide counter, uncomment the next line
-      tick.root.style.display = "none";
-      // show message, uncomment the next line
-      // document.querySelector('.tick-onended-message').style.display = '';
-    };
-  }
+		tick._credits.label = '';
+		// tick.root.credits.display;
+		counter.onended = function () {
+			// redirect, uncomment the next line
+			// window.location = 'my-location.html'
+			// hide counter, uncomment the next line
+			tick.root.style.display = 'none';
+			// show message, uncomment the next line
+			// document.querySelector('.tick-onended-message').style.display = '';
+		};
+	}
 </script>
 
 <script src="https://unpkg.com/@pqina/flip/dist/flip.min.js"></script>
