--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,37 +1,48 @@
 ---
-import Hero from "../components/hero.astro";
-import Situaciones from "../components/situaciones.astro";
-import CTA from "../components/cta.astro";
-import Presentacion from "../components/presentacion.astro";
-import Testiomnios from "../components/testimonios.astro";
+import Hero from '../components/hero.astro';
+import Situaciones from '../components/situaciones.astro';
+import CTA from '../components/cta.astro';
+import Presentacion from '../components/presentacion.astro';
+import Testiomnios from '../components/testimonios.astro';
 
-import Contenido from "../components/contenido.astro";
-import Faq from "../components/faq.astro";
-import Footer from "../components/footer.astro";
-import Ctametodo from "../components/ctametodo.astro";
-import Presentadora from "../components/presentadora.astro";
-import Ctafooter from "../components/ctafooter.astro";
+import Contenido from '../components/contenido.astro';
+import Faq from '../components/faq.astro';
+import Footer from '../components/footer.astro';
+import Ctametodo from '../components/ctametodo.astro';
+import Presentadora from '../components/presentadora.astro';
+import Ctafooter from '../components/ctafooter.astro';
 ---
 
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.png" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
-    <title>Aumenta Pacientes</title>
-  </head>
-  <body>
-    <Hero />
-    <Situaciones />
-    <CTA />
-    <Presentacion />
-    <Testiomnios />
-    <Ctametodo />
-    <Contenido />
-    <Faq />
-    <Presentadora />
-    <Ctafooter />
-    <Footer />
-  </body>
+<html lang="es">
+	<head>
+		<meta charset="utf-8" />
+		<link rel="icon" type="image/svg+xml" href="/favicon.png" />
+		<meta name="viewport" content="width=device-width" />
+		<meta name="generator" content={Astro.generator} />
+		<title>Aumenta Pacientes</title>
+	</head>
+	<body>
+		<!-- HERO -->
+		<Hero />
+		<!-- SITUACIONES -->
+		<Situaciones />
+		<!-- CTA -->
+		<CTA />
+		<!-- PRES -->
+		<Presentacion />
+		<!-- TEST -->
+		<Testiomnios />
+		<!-- CTAM -->
+		<Ctametodo />
+		<!-- CONTENT -->
+		<Contenido />
+		<!-- FAQ -->
+		<Faq />
+		<!-- PRESENTADORA -->
+		<Presentadora />
+		<!-- CTAFOOTER -->
+		<Ctafooter />
+		<!-- FOOTER -->
+		<Footer />
+	</body>
 </html>
