--- a/src/components/ctafooter.astro
+++ b/src/components/ctafooter.astro
@@ -1,13 +1,11 @@
 ---
-import Ctabutton from "./elements/ctabutton.astro";
+import Ctabutton from './elements/ctabutton.astro';
 ---
 
-<section class="bg-white md:py-10 text-primary font-semibold">
-  <h1 class="uppercase md:text-3xl text-center text-primary font-semibold">
-    TRANSFORMA TU NEGOCIO DE CONSULTA
-  </h1>
-  <h1 class="uppercase md:text-3xl text-center">
-    EN UNA MAQUINA DE HACER DINERO
-  </h1>
-  <Ctabutton />
+<section class="bg-white py-4 md:py-10 text-primary font-semibold">
+	<h1 class="uppercase text-xl md:text-3xl text-center text-primary font-semibold">
+		TRANSFORMA TU NEGOCIO DE CONSULTA
+	</h1>
+	<h1 class="uppercase text-xl md:text-3xl text-center">EN UNA MAQUINA DE HACER DINERO</h1>
+	<Ctabutton />
 </section>
