--- a/src/pages/gracias.astro
+++ b/src/pages/gracias.astro
@@ -2,6 +2,12 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
+<script>
+  setTimeout(() => {
+    window.location.replace("https://chat.whatsapp.com/HngdVZAUrXAGewhZWebGNq");
+  }, 4000);
+</script>
+
 <Layout title="Gracias por registrarte">
   <div class="bg-rojo text-white text-xl md:text-2xl uppercase">
     <div class="relative flex overflow-x-hidden">
@@ -60,8 +66,18 @@ import Layout from "../layouts/Layout.astro";
 
     <button
       class="bg-naranja p-4 text-white rounded-lg uppercase font-semibold"
+      onclick="clicked()"
+      id="groupbutton"
     >
       Accede al grupo de whatsapp</button
     >
   </div>
 </Layout>
+
+<script type="text/javascript">
+  function clicked() {
+    window.window.location.replace(
+      "https://chat.whatsapp.com/HngdVZAUrXAGewhZWebGNq"
+    );
+  }
+</script>
