--- a/src/components/hero/ElasticForm.astro
+++ b/src/components/hero/ElasticForm.astro
@@ -71,7 +71,7 @@
       id="ewf_verifyEmails"
     />
     <input type="hidden" id="ewf_captcha" name="captcha" value="false" />
-    <input type="hidden" name="sendActivation" value="true" />
+    <input type="hidden" name="sendActivation" value="false" />
     <input type="hidden" name="notifyEmail" value="" />
     <button
       type="button"
