remove auto timer

--- a/src/pages/gracias.astro
+++ b/src/pages/gracias.astro
@@ -3,9 +3,9 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <script>
-  setTimeout(() => {
-    window.location.replace("https://chat.whatsapp.com/D8iOdZgSGqfHzKsa1sGriS");
-  }, 4000);
+  // setTimeout(() => {
+  //   window.location.replace("https://chat.whatsapp.com/D8iOdZgSGqfHzKsa1sGriS");
+  // }, 4000);
 </script>
 
 <Layout title="Gracias por registrarte">
