feat: completed desktop section

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,4 +1,9 @@
-<footer class="bg-gray-200 md:p-8 p-4 mt-10">
+<footer class="bg-gray-200 md:p-8 p-4">
+  <img
+    src="/aumenta_logo.svg"
+    alt="Aumenta Pacientes"
+    class="w-64 mx-auto md:mb-16 md:mt-8"
+  />
   <p class="md:mx-20 mx-4">
     © {new Date().getFullYear()} Aumenta Pacientes This site is not a part of the
     Facebook website or Facebook Inc. Additionally, this site is not endorsed by
