--- a/src/pages/inscripciones.astro
+++ b/src/pages/inscripciones.astro
@@ -14,6 +14,7 @@ import Bonos from "../components/inscripciones/Bonos.astro";
 import Testimonios from "../components/inscripciones/Testimonios.astro";
 import Oferta from "../components/inscripciones/Oferta.astro";
 import Preguntas from "../components/inscripciones/Preguntas.astro";
+import Footer from "../components/Footer.astro";
 ---
 
 <Layout title="Inscripciones Abiertas">
@@ -43,7 +44,7 @@ import Preguntas from "../components/inscripciones/Preguntas.astro";
   <div
     class="md:-translate-y-36 -translate-y-20 md:w-[720px] w-[320px] mx-auto"
   >
-    <Videoplayer source="https://youtube.com/live/7V2qJHaw2H4" />
+    <Videoplayer source="7V2qJHaw2H4" />
   </div>
 
   <h2 class="font-soap text-center text-naranja text-3xl md:text-8xl md:mb-36">
@@ -208,6 +209,7 @@ import Preguntas from "../components/inscripciones/Preguntas.astro";
     <Testimonios />
     <Oferta />
     <Preguntas />
+    <Footer />
   </div>
 </Layout>
 <div class="mt-8"></div>
