--- a/src/components/inscripciones/Bonos.astro
+++ b/src/components/inscripciones/Bonos.astro
@@ -24,6 +24,23 @@ const bonos = [
 ];
 ---
 
+<script>
+  const el = document.getElementById("llenaConsultaa");
+  const whatsapp = document.getElementById("whatsappa");
+  if (el) {
+    el.addEventListener("click", () => {
+      window.location.href =
+        "https://pay.hotmart.com/N71490976C?off=pklqxrve&checkoutMode=10";
+    });
+  }
+
+  if (whatsapp) {
+    whatsapp.addEventListener("click", () => {
+      window.open("https://wa.me/message/LD54V7JCH3TXD1");
+    });
+  }
+</script>
+
 <section class="md:max-w-6xl mx-auto md:my-16">
   <h1 class="font-soap md:text-4xl text-morado text-center">
     ADEMÁS TENDRÁS LOS SIGUIENTES
@@ -99,10 +116,12 @@ const bonos = [
     </div>
     <div class="flex flex-col items-center gap-4">
       <button
+        id="llenaConsultaa"
         class="font-montserrat font-black text-lg py-2 px-4 md:py-4 md:px-12 md:text-4xl mt-4 text-white bg-verde rounded-lg hover:bg-green-600"
         >QUIERO MI CUPO YA</button
       >
       <button
+        id="whatsappa"
         class="font-montserrat text-lg py-2 px-4 md:text-3xl md:py-4 md:px-12 text-white bg-rojo rounded-lg hover:bg-red-600"
         >¿Necesítas ayuda?</button
       >
