--- a/src/components/inscripciones/Oferta.astro
+++ b/src/components/inscripciones/Oferta.astro
@@ -4,6 +4,23 @@ import Mockgeneral from "../../assets/mockup_general.png";
 import { oferta, bonos, bonoaccionrapida } from "./ofertadata";
 ---
 
+<script>
+  const el = document.getElementById("llenaConsultao");
+  const whatsapp = document.getElementById("whatsappo");
+  if (el) {
+    el.addEventListener("click", () => {
+      window.location.href =
+        "https://pay.hotmart.com/N71490976C?off=pklqxrve&checkoutMode=10";
+    });
+  }
+
+  if (whatsapp) {
+    whatsapp.addEventListener("click", () => {
+      window.open("https://wa.me/message/LD54V7JCH3TXD1");
+    });
+  }
+</script>
+
 <style>
   span.short::after {
     content: " ";
@@ -101,6 +118,7 @@ import { oferta, bonos, bonoaccionrapida } from "./ofertadata";
     </div>
     <div class="flex flex-col items-center md:gap-8">
       <button
+        id="llenaConsultao"
         class="font-montserrat font-black text-lg py-2 px-4 md:py-8 md:px-24 md:text-6xl mt-4 text-white bg-verde rounded-2xl hover:bg-green-600"
         >DA CLICK AQUI <br />
 
@@ -109,6 +127,7 @@ import { oferta, bonos, bonoaccionrapida } from "./ofertadata";
         >
       </button>
       <button
+        id="whatsappo"
         class="font-montserrat text-lg py-2 px-4 md:text-3xl md:py-4 md:px-12 text-white bg-rojo rounded-lg hover:bg-red-600"
         >¿Necesítas ayuda?</button
       >
