fix: mobile adjustments

--- a/src/components/Videoplayer.astro
+++ b/src/components/Videoplayer.astro
@@ -8,6 +8,6 @@ type Props = {
 const { source } = Astro.props as Props;
 ---
 
-<div class="rounded-lg shadow-lg h-full">
+<div class="h-full">
   <YouTube id={source} />
 </div>
