--- a/src/components/inscripciones/Testimonios.astro
+++ b/src/components/inscripciones/Testimonios.astro
@@ -46,19 +46,19 @@ import Videoplayer from "../Videoplayer.astro";
       </p>
     </div>
   </div>
-  <div class="md:max-w-6xl md:my-16 mx-auto">
+  <div class="md:max-w-6xl md:my-16 mx-auto my-8 px-6 md:px-0">
     <h1 class="font-soap md:text-5xl text-naranja text-center">
       Ellos ya tomaron acción
     </h1>
     <h2 class="font-soap md:text-4xl text-center">¿Serás el próximo?</h2>
 
-    <div class="grid md:grid-cols-3 md:gap-16 md:my-16">
+    <div class="grid md:grid-cols-3 md:gap-16 md:my-16 gap-8">
       <Videoplayer source="https://youtu.be/RovCZO68eRA?si=xQASrKAgtY-GPujN" />
       <Videoplayer source="https://youtu.be/T9bFZSCnWSo?si=64Wlszggveh-Gvio" />
       <Videoplayer source="https://youtu.be/kU8QkGrZqeM?si=Lxw6BkF9qu-FzJyD" />
     </div>
 
-    <div class="flex flex-col items-center md:gap-8">
+    <div class="flex flex-col items-center md:gap-8 gap-4">
       <button
         id="llenaConsultat"
         class="font-montserrat font-black text-lg py-2 px-4 md:py-8 md:px-24 md:text-6xl mt-4 text-white bg-verde rounded-2xl hover:bg-green-600"
