fix: update for mobile

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,6 @@
 <footer class="bg-gray-200 md:p-8 p-4">
   <img
+    width="256"
     src="/aumenta_logo.svg"
     alt="Aumenta Pacientes"
     class="w-64 mx-auto md:mb-16 md:mt-8"
