--- a/src/components/inscripciones/Beneficios.astro
+++ b/src/components/inscripciones/Beneficios.astro
@@ -79,12 +79,12 @@ const beneficios = [
     {
       beneficios.map((beneficio) => (
         <>
-          <div class=" h-full rounded-xl w-full bg-morado p-4 md:block hidden">
+          <div class=" h-full rounded-xl w-full bg-morado p-4 md:block hidden ">
             <Image
               src={beneficio.image}
               alt={beneficio.title}
               height={200}
-              class="mx-auto md:mx-0"
+              class="mx-auto "
             />
           </div>
           <div class="bg-morado rounded-lg text-white p-4 md:col-span-2 h-full flex flex-col justify-center">
