--- a/src/components/inscripciones/Bonos.astro
+++ b/src/components/inscripciones/Bonos.astro
@@ -114,7 +114,9 @@ const bonos = [
       registrados)
     </p>
     <div class="md:flex md:justify-center md:my-8 my-4">
-      <CountDown date={"2024-02-15 23:50"} color={false} client:load />
+      <div class="mt-8 flex justify-center">
+        <CountDown date={"2024-02-15 23:50"} mobile={true} client:load />
+      </div>
     </div>
     <div class="flex flex-col items-center gap-4 mb-8 md:mb-0">
       <button
