--- a/src/pages/inscripciones.astro
+++ b/src/pages/inscripciones.astro
@@ -15,6 +15,8 @@ import Testimonios from "../components/inscripciones/Testimonios.astro";
 import Oferta from "../components/inscripciones/Oferta.astro";
 import Preguntas from "../components/inscripciones/Preguntas.astro";
 import Footer from "../components/Footer.astro";
+import FondoDesktop from "../assets/fondo gris_web.png";
+import FondoMobile from "../assets/fondo gris_movil.png";
 ---
 
 <script>
@@ -35,8 +37,18 @@ import Footer from "../components/Footer.astro";
 </script>
 
 <Layout title="Inscripciones Abiertas">
-  <div class="font-montserrat bg-gray-200 px-4 md:px-0">
-    <div class="md:pt-12 md:pb-56 pb-24 pt-8">
+  <div class="font-montserrat px-4 md:px-0">
+    <Image
+      src={FondoDesktop}
+      alt="Fondo"
+      class="absolute w-full top-0 z-0 md:block hidden"
+    />
+    <Image
+      src={FondoMobile}
+      alt="Fondo"
+      class="absolute w-full top-0 left-0 z-0 md:hidden"
+    />
+    <div class="relative md:pt-12 md:pb-56 pb-24 pt-8">
       <img
         src="/aumenta_logo.svg"
         alt="Aumenta Logo"
