feat: fixes to mobile

--- a/src/pages/gracias.astro
+++ b/src/pages/gracias.astro
@@ -75,8 +75,6 @@ import Layout from "../layouts/Layout.astro";
 
 <script type="text/javascript">
   function clicked() {
-    window.window.location.replace(
-      "https://chat.whatsapp.com/D8iOdZgSGqfHzKsa1sGriS"
-    );
+    window.location.replace("https://chat.whatsapp.com/D8iOdZgSGqfHzKsa1sGriS");
   }
 </script>
