--- a/src/components/inscripciones/Bonos.astro
+++ b/src/components/inscripciones/Bonos.astro
@@ -82,7 +82,7 @@ const bonos = [
     <h2 class="font-soap md:text-4xl text-center text-morado text-2xl">
       completamente gratis
     </h2>
-    <h2 class="font-soap md:text-4xl text-center md:my-8 text-2xl">
+    <!-- <h2 class="font-soap md:text-4xl text-center md:my-8 text-2xl">
       MÁS EL BONO DE ACCIÓN RÁPIDA ⏰ PARA LAS 12 PRIMERAS PERSONAS
     </h2>
     <Image
@@ -115,7 +115,7 @@ const bonos = [
     </p>
     <div class="flex justify-center md:my-8 my-4">
       <CountDown date={"2024-02-15 23:50"} mobile={true} client:only="react" />
-    </div>
+    </div> -->
     <div class="flex flex-col items-center gap-4 mb-8 md:mb-0">
       <button
         id="llenaConsultaa"
