--- a/src/components/hero/HeroForm.astro
+++ b/src/components/hero/HeroForm.astro
@@ -11,9 +11,7 @@ import ElasticForm from "./ElasticForm.astro";
         >online</span
       > en vivo
     </p>
-    <p class="font-bold text-xl md:text-3xl py-2">
-      12 al 14 de Febrero de 2024
-    </p>
+    <p class="font-bold text-xl md:text-3xl py-2">8 al 10 de Abril de 2024</p>
 
     <p
       class="text-rojo text-xl font-extrabold md:text-3xl uppercase flex gap-2 items-center justify-center"
